--- a/08_flex_box/startup_matchmaker/css/style.css
+++ b/08_flex_box/startup_matchmaker/css/style.css
@@ -1,6 +1,9 @@
 body {
   font-family: Arial;
   margin: 0;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
 }
 
 button {
@@ -83,33 +86,30 @@ header nav a {
 
 .hero {
   background-image: url('../images/coworking.jpg');
-  background-size: 1400px;
-  background-position: center;
-  height: 500px;
+
   padding-top: 1rem;
   padding-bottom: 1rem;
+  height: 500px;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .sign-up-call-to-action {
   background-color: rgba(255, 255, 255, 0.75);
   box-shadow: 0 0 5px black;
 
-  width: 30%;
+  width: 20%;
+  height: 80%;
   float: right;
 
-  font-size: 26px;
-
   padding: 1rem;
+  margin: 1rem;
   box-sizing: border-box;
-  margin-right: 80px;
 }
 
 .sign-up-call-to-action button {
   width: 100%;
   background-color: gold;
-  font-size: 24px;
-  padding-top: 10px;
-  padding-bottom: 10px;
 }
 
 .hero:after {
@@ -136,94 +136,94 @@ header nav a {
   padding-right: 1rem;
 
   box-sizing: border-box;
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 5px;
 }
 
-.info-box {
-	font-size: 24px;
+.profilecards {
+  background-color: lightgray;
 }
 
-.info-box button {
-	width: 80%;
-	height: 20%;
-	font-size: 24px;
-	background-color: lightgray;
+.profiles {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  box-sizing: border-box; 
+  margin: 10px;
+  padding-top: 20px;
+  flex-direction: row;
 }
+
+.profile {
+  width: 20%;
+  box-sizing: border-box;
+  border-style: hidden;
+  border-radius: 0px;
+  margin: 10px;
+  background-color: white;
+  padding: 30px;
+}
+
+.profile ul {
+  margin: 0;
+  list-style: none;
+  display: flex;
+  align-content: row;
+  padding-bottom: 4px;
+  padding-top: 2px;
+  padding-left: 0;
+}
+
+.profile ul li {
+  padding: 2px;
+  box-sizing: border-box;
+  border-style: solid;
+  background-color: gray;
+  color: white;
+  margin: 2px;
+  padding: 5px;
+  border-radius: 15px;
+  font-size: .6rem;
+}
+
+.profile button {
+  background-color: yellow;
+  width: 100%;
+  height: 10%;
+}
+
+.profile button a {
+  text-decoration: none;
+  color: black;
+}
+
+.profile p {
+  margin: 0;
+  color: black;
+  font-weight: bold;
+}
+
 
 footer {
   color: white;
   background-color: black;
-  padding-top: 5px;
-  padding-bottom: 5px;
 }
 
-footer p {
-	padding-left: 20px;
+@media screen and (max-width: 600px) {
+  .primary-navigation, .secondary-navigation {
+    display: block;
+  }
+
+  header nav {
+    float: none;
+  }
+
+  .sign-up-call-to-action {
+    width: 100%;
+  }
+
+  .info-box {
+    width: 100%;
+  }
 }
-
-@media screen and (max-width: 768px) {
-	.primary-navigation, .secondary-navigation {
-		display: block;
-		float: left;
-	}
-
-	.sign-up-call-to-action {
-		width: 100%;
-		margin: 0 auto;
-	}
-
-	.info-box {
-		width: 100%;
-	}
-
-}
-
-.profile {
-	width: 25%;
-	float: right;
-	box-sizing: border-box;
-	padding-top: 1rem;
-	padding-left: 1.5rem;	
-	border: 25px solid lightgray;
-	border-width: 30px;
-	padding-bottom: 1rem;
-	}
-
-
-.profile li {
-	display: inline-block;
-	margin: 0;
-}
-
-.profile button {
-  width: 90%;
-  background-color: yellow;
-  font-size: 20px;
-  padding-top: 5px;
-  padding-bottom: 5px;
-}
-
-.profile button a {
-	color: black;
-	text-decoration: none;
-}
-
-.profile p {
-	margin-top: 2px;
-	margin-bottom: 2px;
-}
-
-.profile ul {
-	margin-top: 2px;
-	padding-left: 0px;
-}
-
-.profile ul button {
-	width: 15%;
-	font-size: 9px;
-	background-color: gray;
-	border-radius: 25px;
-	color: white;
-	font-family: arial;
-}
-
-
